Margin makin' some blank white space at the bottom. Fixed!

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -345,5 +345,6 @@ h3 {
 
 #email p {
 	height: 100px;
+	margin-bottom: 0px;
 }
 
